feat: user creation error handling
