# docs/swagger.yaml
@@ -20,6 +20,28 @@ definitions:
       username:
         type: string
     type: object
+  pkg_users.UserModelValidator:
+    properties:
+      user:
+        properties:
+          address_id:
+            type: string
+          email:
+            type: string
+          password:
+            maxLength: 255
+            minLength: 8
+            type: string
+          username:
+            maxLength: 255
+            minLength: 4
+            type: string
+        required:
+        - email
+        - password
+        - username
+        type: object
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -54,6 +76,13 @@ paths:
       consumes:
       - application/json
       description: Creates single user in database
+      parameters:
+      - description: User Object
+        in: body
+        name: User
+        required: true
+        schema:
+          $ref: '#/definitions/pkg_users.UserModelValidator'
       produces:
       - application/json
       responses:
