# pkg/users/controllers.go
@@ -1,9 +1,12 @@
 package users
 
 import (
+	"errors"
+	"fmt"
 	"net/http"
 
 	_ "github.com/dewciu/timetrove_api/docs"
+	"github.com/dewciu/timetrove_api/pkg/common"
 
 	"github.com/gin-gonic/gin"
 )
@@ -38,8 +41,31 @@ func GetAllUsersController(c *gin.Context) {
 // @Tags user
 // @Accept json
 // @Produce json
+// @Param User body UserModelValidator true "User Object"
 // @Success 200 {object} UserResponse "Returns Created User"
 // @Router /users [post]
 func CreateUserController(c *gin.Context) {
+	validator := UserModelValidator{}
+	if err := validator.Bind(c); err != nil {
+		c.JSON(http.StatusBadRequest, common.NewValidationError(err))
+		return
+	}
 
+	err := CreateUserQuery(validator.userModel)
+
+	if err != nil {
+		fmt.Println(err)
+		var er *common.AlreadyExistsError
+		if errors.As(err, &er) {
+			err := err.(*common.AlreadyExistsError)
+			c.JSON(http.StatusConflict, common.NewError("user", err))
+			return
+		}
+		c.JSON(http.StatusInternalServerError, common.NewError("database", err))
+		return
+	}
+
+	serializer := UserSerializer{C: c, UserModel: validator.userModel}
+
+	c.JSON(http.StatusCreated, gin.H{"user": serializer.Response()})
 }
