# pkg/users/models.go
@@ -10,12 +10,16 @@ import (
 
 type UserModel struct {
 	common.BaseModel
-	Username  string                 `gorm:"unique;not null; type:varchar(100)" json:"username"`
-	Email     string                 `gorm:"unique;not null; type:varchar(100)" json:"email"`
+	Username  string                 `gorm:"unique;not null; type:varchar(255)" json:"username"`
+	Email     string                 `gorm:"unique;not null; type:varchar(255)" json:"email"`
 	Password  string                 `gorm:"not null" json:"password"`
 	AddressID uuid.UUID              `gorm:"default:null" json:"address_id"`
 	Address   addresses.AddressModel `gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;"`
 } //@name User
+
+func (u *UserModel) TableName() string {
+	return "users"
+}
 
 func (u *UserModel) BeforeCreate(tx *gorm.DB) error {
 	if u.Password == "" {
